fix: ensure text alignment for sobremim-texto for improved readability

--- a/css/sobremim.css
+++ b/css/sobremim.css
@@ -18,6 +18,7 @@
   max-width: 40ch;
   margin-bottom: 60px;
   color: #525252;
+  text-align: justify; 
 }
 
 .sobremim-texto strong {
